# mcpsnare

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: claims-matrix.md  interactsh-runbook.md  real-world-scan-2026-07.md  smoke-run.md
docs/superpowers/plans/: 2026-06-10-mcprobe-m3-oob-fidelity.md  2026-06-10-mcprobe-m4-os-payloads-aggressive.md  2026-06-10-mcprobe-m7-resources-sqli.md  2026-06-11-mcprobe-http-live-e2e.md
docs/superpowers/specs/: 2026-06-08-mcprobe-design.md
mcprobe/: cli.py  engine.py  models.py
mcprobe/checks/: base.py  cmd_injection.py  info_leak.py  path_traversal.py  ssrf.py
mcprobe/connect/: resources.py  session.py
mcprobe/inject/: mapper.py
mcprobe/oob/: interactsh.py  interactsh_client.py
mcpsnare/: cli.py  engine.py  models.py
mcpsnare/checks/: __init__.py  base.py  capability.py  cmd_injection.py  code_injection.py  sql_injection.py  tool_poisoning.py
mcpsnare/connect/: session.py
mcpsnare/inject/: mapper.py
mcpsnare/report/: render.py
tests/: test_checks.py  test_cli.py  test_engine.py  test_http_e2e.py  test_interactsh_client.py  test_mapper.py  test_models.py  test_oob_interactsh.py  test_passive.py  test_real_shell_e2e.py  test_report.py  test_session.py  test_smoke.py
tests/fixtures/: http_server.py
tests/fixtures/code_server/: server.py
tests/fixtures/tools_only_server/: server.py
tests/fixtures/vuln_server/: server.py
