[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mcprobe"
version = "0.1.0"
description = "Active, confirmation-driven security scanner for MCP server implementations"
requires-python = ">=3.11"
dependencies = ["mcp>=1.0.0", "httpx>=0.27", "rich>=13.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
mcprobe = "mcprobe.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
