[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mcpsnare"
dynamic = ["version"]
description = "Active security scanner that pentests MCP (Model Context Protocol) servers - triggers and out-of-band-confirms real vulnerabilities. Like Burp's Active Scan, but the target is an MCP server."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Dennis Sepede", email = "dennisepede@proton.me" }]
keywords = ["mcp", "model-context-protocol", "security", "scanner", "pentest", "vulnerability", "dast", "appsec", "ssrf", "oob"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]
dependencies = ["mcp>=1.0.0", "httpx>=0.27", "rich>=13.0", "cryptography>=42.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "uvicorn>=0.31"]

[project.urls]
Homepage = "https://github.com/Den-Sec/mcpsnare"
Repository = "https://github.com/Den-Sec/mcpsnare"
Issues = "https://github.com/Den-Sec/mcpsnare/issues"
Changelog = "https://github.com/Den-Sec/mcpsnare/blob/main/CHANGELOG.md"

[project.scripts]
mcpsnare = "mcpsnare.cli:main"

[tool.setuptools]
packages = ["mcpsnare", "mcpsnare.checks", "mcpsnare.connect", "mcpsnare.inject", "mcpsnare.oob", "mcpsnare.report"]

[tool.setuptools.dynamic]
version = { attr = "mcpsnare.__version__" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests that take many seconds (deselect with -m 'not slow')",
]
